src/test/resources/miniJava/Test33.mjava
class Test31 {
	public static void main(String[] args){
		System.out.println(5);
	}
}

class A {
	public int x;
	public int y;
	
	public void init(){
		x = 5;
		y = 10;
	}
	
	public int add(){
		int ret = x + y;
		return ret;
		System.out.println(ret); // error
	}
	
	public boolean equal(){
		return x == y;
	}
	
	public int doABunchOfStuff(){
		x = -x;
		y = add();
		return y;
		x = x + y; // error
	}
	
	public void doNothing(){
		
	}
	
	public int returnNothing(){
		// error
	}
}
